# fomoccs

./: .env.example  .gitignore  INSTRUCTIONS.md  README.md  build.js  justfile  package-lock.json  ruff.toml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  pyproject.toml
backend/alembic/versions/: b2c3d4e5f6a7_add_crawl_url_results_table.py  c5d6e7f8g9h0_add_provider_tracking.py  d7e8f9g0h1i2_add_source_tier_throttle.py  e8f9g0h1i2j3_widen_password_hash_column.py
backend/api/: celery_app.py  config.py  database.py  dependencies.py  main.py  task_names.py
backend/api/admin/: __init__.py  views.py
backend/api/middleware/: rate_limit.py  token_blocklist.py
backend/api/models/: base.py  crawl.py  source.py  user.py
backend/api/routers/: auth.py  crawl_jobs.py  feed.py  locations.py  sources.py
backend/api/schemas/: crawl.py  location.py  source.py  user.py
backend/api/services/: event_processing.py  geocoding.py
backend/api/tasks/: __init__.py  geocoding.py  processing.py
backend/scripts/: assign_location_emojis.py  dedup_events.py  merge_locations.py  reprocess_crawl_jobs.py  seed_location_alternates.py
backend/tests/: conftest.py
backend/tests/routers/: test_locations.py
backend/tests/schemas/: test_source.py  test_user.py
backend/tests/services/: test_event_processing.py  test_geocoding.py
backend/tests/tasks/: test_geocoding.py  test_processing.py
backend/tui/: __init__.py  app.py  app.tcss  db.py  utils.py
backend/tui/screens/: __init__.py  base.py  dashboard.py  events.py  events_detail.py  help.py  locations.py  locations_detail.py  logs.py  operations.py  pipeline_run.py  source_wizard.py  sources.py  sources_detail.py  tag_rules.py
backend/tui/widgets/: __init__.py  confirm_dialog.py  input_dialog.py  loading.py  status_badge.py
deploy/: README.md  cloudbuild-backend.yaml  deploy-backend.sh  deploy-frontend.sh  deploy-pipeline.sh  deploy.sh  setup-scheduler.sh
docs/: adding-a-source.md  architecture.md  deployment.md  pipeline-deep-dive.md  tui-guide.md
infrastructure/: backend.tf  bootstrap-wif.sh  main.tf  terraform.tfvars.example
pipeline/: Dockerfile  README.md  celery_publisher.py  crawler.py  db.py  docker-entrypoint.sh  extractor.py  instagram.py  llm_models.py  main.py  pyproject.toml  task_names.py
pipeline/discovery/: __init__.py  __main__.py  prompts.py  query_generator.py
pipeline/tests/: test_celery_publisher.py  test_crawler.py  test_hostname_throttle.py  test_main_celery_bridge.py  test_query_generator.py  test_throttle_concurrency.py
scripts/: backfill_geocode.py  bulk_add_sources.py  instagram_harvest.py
src/: about.html  (+1 more)
(+29 files in other folders)
