[project]
name = "fomoccs-backend"
version = "0.1.0"
description = "Fomoccs backend API"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "sqladmin>=0.23.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "itsdangerous>=2.2.0",
    "alembic>=1.18.4",
    "celery[redis]>=5.4",
]

[dependency-groups]
dev = [
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "testcontainers[postgres]>=4.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
# Ruff doesn't recognize Python 3.14 yet, so it misformats except clauses
# without an explicit target. Pin to 3.12 until ruff adds 3.14 support.
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade (modern Python syntax)
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models use string forward references resolved at runtime
"api/models/*.py" = ["F821"]

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "api.tasks.*"
# Celery task decorators are untyped and inject `self` without annotation
disallow_untyped_decorators = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "api.models.*"
# SQLAlchemy models use string forward references resolved at runtime
disable_error_code = ["name-defined"]


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
