[project]
name = "momaverse-pipeline"
version = "0.1.0"
description = "Momaverse event crawling and processing pipeline"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.0",
    "openai>=1.0",
    "httpx>=0.28.1",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "celery[redis]>=5.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
